feature initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 videos
 temp/
-poc1/videos
-poc2/videos
+old/poc1/videos
+old/poc2/videos
+workout_classifier_1/cache
+workout_classifier_1/cache_
+workout_classifier_1/cache__
 .idea
