feature initial commit

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ old/poc2/videos
 workout_classifier_1/cache
 workout_classifier_1/cache_
 workout_classifier_1/cache__
+workout_classifier_1/workouts_analyzed.csv
 .idea
