hydrow cleaned version

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,6 @@ poc1/videos
 poc2/videos
 .idea
 data_raw
+cache
 workout_classifier_2/playpen.py
+workout_classifier_hdr/save_jsons_from_all_workouts.py
