--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ data_raw
 cache
 workout_classifier_2/playpen.py
 workout_classifier_hdr/save_jsons_from_all_workouts.py
+workout_classifier_hdr/__pycache__
