added athletes bio

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ cache
 workout_classifier_2/playpen.py
 workout_classifier_hdr/save_jsons_from_all_workouts.py
 workout_classifier_hdr/__pycache__
+workout_classifier_hdr/.env
