--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,15 @@ videos
 temp/
 old/poc1/videos
 old/poc2/videos
-workout_classifier_1/cache
-workout_classifier_1/cache_
-workout_classifier_1/cache__
-workout_classifier_1/workouts_analyzed.csv
+workout_classifier_youtube/cache
+workout_classifier_youtube/cache_
+workout_classifier_youtube/cache__
+workout_classifier_youtube/workouts_analyzed.csv
+workout_classifier_hydrow/cache
+workout_classifier_hydrow/cache_
+workout_classifier_hydrow/cache__
+workout_classifier_hydrow/workouts_analyzed.csv
 .idea
+/workout_classifier_hydrow/Workout.csv
+/workout_classifier_hydrow/workouts_w_hydrow.csv
+.env
